added evaltopN and nan as zero evaluations

--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -940,7 +940,8 @@
      "text": [
       "./data/DATA_WORD2VECV2_HADM_TOP50CAT\n",
       "Train, Test: 26363 13182\n",
-      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n"
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "20 & 0.9998 & 0.9383 & 0.9676 & 0.9943 & 0.8523 & 0.4940 & 0.1086 & 0.1482 & 0.8829 & 0.0729 \\\\ \\hline\n"
      ]
     }
    ],
@@ -957,13 +958,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_WORD2VECV3_HADM_TOP10\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.4065 & 0.1290 & 0.1805 & 0.8156 & 0.2353 & 0.4049 & 0.1285 & 0.1803 & 0.8151 & 0.2368 \\\\ \\hline\n",
+      "10 & 0.5552 & 0.1972 & 0.2584 & 0.8238 & 0.2411 & 0.5217 & 0.1970 & 0.2585 & 0.8225 & 0.2377 \\\\ \\hline\n",
+      "25 & 0.5946 & 0.2566 & 0.3306 & 0.8337 & 0.2543 & 0.5887 & 0.2525 & 0.3262 & 0.8316 & 0.2493 \\\\ \\hline\n",
+      "50 & 0.6156 & 0.2795 & 0.3588 & 0.8369 & 0.2583 & 0.5985 & 0.2715 & 0.3485 & 0.8335 & 0.2538 \\\\ \\hline\n",
+      "75 & 0.6247 & 0.2856 & 0.3654 & 0.8382 & 0.2607 & 0.6033 & 0.2779 & 0.3547 & 0.8342 & 0.2552 \\\\ \\hline\n",
+      "100 & 0.6201 & 0.2889 & 0.3688 & 0.8383 & 0.2612 & 0.5938 & 0.2807 & 0.3568 & 0.8340 & 0.2541 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV4_HADM_TOP10\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.4703 & 0.1339 & 0.1845 & 0.8144 & 0.2338 & 0.4370 & 0.1342 & 0.1849 & 0.8140 & 0.2350 \\\\ \\hline\n",
+      "10 & 0.5659 & 0.2021 & 0.2624 & 0.8226 & 0.2365 & 0.4745 & 0.1991 & 0.2581 & 0.8208 & 0.2346 \\\\ \\hline\n",
+      "25 & 0.5923 & 0.2565 & 0.3327 & 0.8342 & 0.2537 & 0.5919 & 0.2517 & 0.3264 & 0.8324 & 0.2487 \\\\ \\hline\n",
+      "50 & 0.6216 & 0.2904 & 0.3683 & 0.8393 & 0.2620 & 0.5984 & 0.2846 & 0.3606 & 0.8360 & 0.2528 \\\\ \\hline\n",
+      "75 & 0.6283 & 0.2996 & 0.3812 & 0.8403 & 0.2638 & 0.6030 & 0.2921 & 0.3706 & 0.8370 & 0.2558 \\\\ \\hline\n",
+      "100 & 0.6298 & 0.3010 & 0.3812 & 0.8412 & 0.2659 & 0.6001 & 0.2927 & 0.3694 & 0.8370 & 0.2564 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV3_HADM_TOP10\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.3814 & 0.0794 & 0.1177 & 0.8181 & 0.2402 & 0.3732 & 0.0755 & 0.1123 & 0.8162 & 0.2398 \\\\ \\hline\n",
+      "10 & 0.9546 & 0.2796 & 0.3864 & 0.8638 & 0.3279 & 0.5460 & 0.1438 & 0.2029 & 0.8240 & 0.2451 \\\\ \\hline\n",
+      "20 & 0.9996 & 0.9649 & 0.9817 & 0.9943 & 0.9531 & 0.5420 & 0.1794 & 0.2480 & 0.8224 & 0.2385 \\\\ \\hline\n",
+      "30 & 0.9999 & 0.9740 & 0.9867 & 0.9958 & 0.9662 & 0.5632 & 0.1674 & 0.2359 & 0.8226 & 0.2403 \\\\ \\hline\n",
+      "./data/DATA_WORD2VECV4_HADM_TOP10\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.4012 & 0.0918 & 0.1326 & 0.8201 & 0.2422 & 0.3610 & 0.0879 & 0.1276 & 0.8180 & 0.2405 \\\\ \\hline\n",
+      "10 & 0.9489 & 0.2931 & 0.4009 & 0.8657 & 0.3282 & 0.5993 & 0.1548 & 0.2169 & 0.8250 & 0.2447 \\\\ \\hline\n",
+      "20 & 0.9994 & 0.9654 & 0.9819 & 0.9944 & 0.9534 & 0.5283 & 0.1852 & 0.2530 & 0.8225 & 0.2365 \\\\ \\hline\n",
+      "30 & 0.9999 & 0.9735 & 0.9865 & 0.9957 & 0.9658 & 0.5338 & 0.1724 & 0.2400 & 0.8227 & 0.2387 \\\\ \\hline\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: run these. From the results, fill up Table 5\n",
     "run_experiment(\"./data/DATA_WORD2VECV3_HADM_TOP10\")\n",
     "run_experiment(\"./data/DATA_WORD2VECV4_HADM_TOP10\")\n",
     "run_experiment2(\"./data/DATA_WORD2VECV3_HADM_TOP10\")\n",
