--- a/code/feature_extraction_nonseq.ipynb
+++ b/code/feature_extraction_nonseq.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# MIMIC III Feature Extraction"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Data Loading"
    ]
@@ -18,7 +24,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -36,14 +44,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Feature Extraction"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### TF-IDF (using pyspark)"
    ]
@@ -52,7 +66,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -76,7 +92,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -105,7 +123,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### TF-IDF (using sklearn)"
    ]
@@ -114,7 +135,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -130,7 +153,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -175,7 +200,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### WORD2VEC\n",
     "Note: This code only converts the data using a pre-trained word2vec model"
@@ -185,7 +213,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -213,7 +243,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -322,35 +354,50 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### DOC2VEC\n",
-    "Note: This code only converts the data using a pre-trained word2vec model"
+    "Note: This code only converts the data using a pre-trained doc2vec model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "def create_DOC2VEC(df, inputCol=\"text\", outputCol=\"features\",\n",
-    "                   doc2vecmodel=\"./data/model_word2vec.txt\"):\n",
+    "def create_DOC2VEC(df,doc2vecmodel):\n",
     "    # TODO: Cesar, please implement this\n",
-    "    \n",
+    "    import pandas as pd\n",
+    "    import numpy as np\n",
+    "    df1=pd.read_csv(doc2vecmodel, index_col='id') \n",
+    "    df1['features']=df1.values.tolist()\n",
+    "    df1=df1['features'].apply(np.asarray)\n",
+    "        \n",
+    "    result = pd.merge(pd.DataFrame({'id':df1.index, 'features':df1.values}), df, on='id')\n",
+    "    del result['text']\n",
+    "    del df1\n",
     "    # make sure to delete intermediate columns and the input column\n",
     "    # if not, the output_csv will contain these information (which shouldn't be needed)\n",
-    "    del df['z_cleaned']\n",
-    "    del df[inputCol] \n",
+    "    #del df['z_cleaned']\n",
+    "    #del df[inputCol] \n",
     "    \n",
-    "    return df"
+    "    return result"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Helper Functions"
    ]
@@ -359,7 +406,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -470,7 +519,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Actual Data Preprocessing\n",
     "prepare separation indices (train, validation, test)"
@@ -480,7 +532,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -627,7 +681,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "TFIDF v1"
    ]
@@ -636,7 +693,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -669,7 +728,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "WORD2VEC v0"
    ]
@@ -678,7 +740,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -720,7 +784,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "WORD2VEC v1"
    ]
@@ -729,7 +796,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -771,7 +840,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "WORD2VEC v2"
    ]
@@ -780,7 +852,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -822,7 +896,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "WORD2VEC v3 (bionlp win 2)"
    ]
@@ -831,7 +908,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -875,7 +954,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "WORD2VEC v3 (bionlp win 30)"
    ]
@@ -884,7 +966,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -926,7 +1010,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "DOC2VEC v0 (100 features)"
    ]
@@ -935,7 +1022,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -945,7 +1034,7 @@
     "t0 = time()\n",
     "\n",
     "df2 = create_DOC2VEC(df1_pd.copy(),\n",
-    "                     doc2vecmodel=\"./data/model_doc2vec_v2_100dim\")\n",
+    "                     doc2vecmodel=\"./data/model_doc2vec_v2_100dim_final.csv\")\n",
     "\n",
     "batch_output_csv(df2, \"doc2vecv0\", \"./data/DATA_DOC2VECV0_HADM_TOP10\", ICD9CODES_TOP10,\n",
     "                 hadmid_pickle='./data/TRAIN-VAL-TEST-HADMID.p')\n",
@@ -962,7 +1051,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "DOC2VEC v1 (300 features)"
    ]
@@ -971,7 +1063,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -981,7 +1075,7 @@
     "t0 = time()\n",
     "\n",
     "df2 = create_DOC2VEC(df1_pd.copy(),\n",
-    "                     doc2vecmodel=\"./data/model_doc2vec_v2_300dim\")\n",
+    "                     doc2vecmodel=\"./data/model_doc2vec_v2_300dim_final.csv\")\n",
     "\n",
     "batch_output_csv(df2, \"doc2vecv0\", \"./data/DATA_DOC2VECV1_HADM_TOP10\", ICD9CODES_TOP10,\n",
     "                 hadmid_pickle='./data/TRAIN-VAL-TEST-HADMID.p')\n",
@@ -998,7 +1092,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "DOC2VEC v2 (600 features)"
    ]
@@ -1007,7 +1104,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1017,7 +1116,7 @@
     "t0 = time()\n",
     "\n",
     "df2 = create_DOC2VEC(df1_pd.copy(),\n",
-    "                     doc2vecmodel=\"./data/model_doc2vec_v2_600dim\")\n",
+    "                     doc2vecmodel=\"./data/model_doc2vec_v2_600dim_final.csv\")\n",
     "\n",
     "batch_output_csv(df2, \"doc2vecv0\", \"./data/DATA_DOC2VECV2_HADM_TOP10\", ICD9CODES_TOP10,\n",
     "                 hadmid_pickle='./data/TRAIN-VAL-TEST-HADMID.p')\n",
@@ -1034,7 +1133,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "TFIDF v0"
    ]
@@ -1043,7 +1145,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1077,14 +1181,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Test (basic only)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "[Test] Load csv file\n",
     "count should be the same with the sql query"
@@ -1094,7 +1204,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1543,7 +1655,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1563,7 +1677,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -1571,15 +1687,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Apache Toree - PySpark",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "apache_toree_pyspark"
+   "name": "python2"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
    "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "python",
-   "version": "2.7.13\n"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
