work in progress

--- a/code/feature_extraction_nonseq.ipynb
+++ b/code/feature_extraction_nonseq.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -330,22 +330,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def create_DOC2VEC(df, inputCol=\"text\", outputCol=\"features\",\n",
-    "                   doc2vecmodel=\"./data/model_word2vec.txt\"):\n",
+    "def create_DOC2VEC(df,doc2vecmodel):\n",
     "    # TODO: Cesar, please implement this\n",
-    "    \n",
+    "    import pandas as pd\n",
+    "    import numpy as np\n",
+    "    df1=pd.read_csv(doc2vecmodel, index_col='id') \n",
+    "    df1['features']=df1.values.tolist()\n",
+    "    df1=df1['features'].apply(np.asarray)\n",
+    "        \n",
+    "    result = pd.merge(pd.DataFrame({'id':df1.index, 'features':df1.values}), df, on='id')\n",
+    "    del result['text']\n",
+    "    del df1\n",
     "    # make sure to delete intermediate columns and the input column\n",
     "    # if not, the output_csv will contain these information (which shouldn't be needed)\n",
-    "    del df['z_cleaned']\n",
-    "    del df[inputCol] \n",
+    "    #del df['z_cleaned']\n",
+    "    #del df[inputCol] \n",
     "    \n",
-    "    return df"
+    "    return result"
    ]
   },
   {
@@ -357,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -478,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -487,7 +494,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     0     0     0   \n",
+      "       id  4019  4280  42731  41401  5849  25000  2724  51881  5990  \\\n",
+      "0  117760     0     0      0      0     0      0     0      1     0   \n",
+      "1  129030     1     0      0      0     0      0     1      0     0   \n",
+      "2  172040     0     0      0      1     1      0     0      0     0   \n",
+      "3  156170     0     1      1      0     1      1     0      0     0   \n",
+      "4  199180     0     1      0      1     0      1     0      0     0   \n",
+      "\n",
+      "                         ...                          c511  c412  c707  c348  \\\n",
+      "0                        ...                             0     0     0     1   \n",
+      "1                        ...                             0     0     0     0   \n",
+      "2                        ...                             0     0     0     0   \n",
+      "3                        ...                             0     0     0     0   \n",
       "4                        ...                             0     0     0     0   \n",
       "\n",
       "   c765  cE88  c571  c300  c733  \\\n",
@@ -505,18 +523,7 @@
       "4  Admission Date:  [**2164-7-2**]       Discharg...  \n",
       "\n",
       "[5 rows x 102 columns]\n",
-      "       id  4019  4280  42731  41401  5849  25000  2724  51881  5990  \\\n",
-      "0  117760     0     0      0      0     0      0     0      1     0   \n",
-      "1  129030     1     0      0      0     0      0     1      0     0   \n",
-      "2  172040     0     0      0      1     1      0     0      0     0   \n",
-      "3  156170     0     1      1      0     1      1     0      0     0   \n",
-      "4  199180     0     1      0      1     0      1     0      0     0   \n",
-      "\n",
-      "                         ...                          c511  c412  c707  c348  \\\n",
-      "0                        ...                             0     0     0     1   \n",
-      "1                        ...                             0     0     0     0   \n",
-      "2                        ...                             0     0     0     0   \n",
-      "3                        ...                             0           id  4019  4280  42731  41401  5849  25000  2724  51881  5990  \\\n",
+      "           id  4019  4280  42731  41401  5849  25000  2724  51881  5990  \\\n",
       "22653  112108     1     1      0      0     0      0     0      0     0   \n",
       "14729  136683     1     0      0      0     0      0     0      0     0   \n",
       "17620  187756     0     1      1      0     0      1     0      0     0   \n",
@@ -545,7 +552,8 @@
       "48887  Admission Date:  [**2176-12-16**]             ...  \n",
       "\n",
       "[5 rows x 102 columns]\n",
-      "5272626363\n",
+      "52726\n",
+      "26363\n",
       "+------+----+----+-----+-----+----+-----+----+-----+----+-----+----+----+----+---+----+----+---+-----+-----+----+----+----+-----+---+----+---+----+-----+----+-----+----+-----+----+-----+-----+----+----+-----+-----+-----+-----+----+----+----+----+----+----+----+-----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+--------------------+\n",
       "|    id|4019|4280|42731|41401|5849|25000|2724|51881|5990|53081|2720|2859|2449|486|2851|2762|496|99592|V5861|5070|0389|5859|40390|311|3051|412|2875|41071|2761|V4581|4240|V1582|5119|V4582|40391|V290|4241|78552|V5867|42789|32723|9971|5845|2760|7742|5180|V053|4168|49390|2767|c401|c427|c276|c272|c414|c250|c428|c518|c285|c584|cV45|c599|c530|cV58|c585|cE87|c403|cV10|c038|c995|c424|c410|c780|c244|c997|c785|c305|c998|c458|c486|cV15|c041|c496|c996|c287|cV12|c790|c507|cE93|c493|c311|c511|c412|c707|c348|c765|cE88|c571|c300|c733|                text|\n",
       "+------+----+----+-----+-----+----+-----+----+-----+----+-----+----+----+----+---+----+----+---+-----+-----+----+----+----+-----+---+----+---+----+-----+----+-----+----+-----+----+-----+-----+----+----+-----+-----+-----+-----+----+----+----+----+----+----+----+-----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+--------------------+\n",
@@ -933,11 +941,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: Traceback (most recent call last):\n",
+       "  File \"/tmp/kernel-PySpark-7c3a1c65-7572-4fdc-a1ea-5298ddbc6879/pyspark_runner.py\", line 189, in <module>\n",
+       "    eval(compiled_code)\n",
+       "  File \"<string>\", line 4, in <module>\n",
+       "  File \"<string>\", line 4, in create_DOC2VEC\n",
+       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/pandas/io/parsers.py\", line 646, in parser_f\n",
+       "    return _read(filepath_or_buffer, kwds)\n",
+       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/pandas/io/parsers.py\", line 389, in _read\n",
+       "    parser = TextFileReader(filepath_or_buffer, **kwds)\n",
+       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/pandas/io/parsers.py\", line 730, in __init__\n",
+       "    self._make_engine(self.engine)\n",
+       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/pandas/io/parsers.py\", line 923, in _make_engine\n",
+       "    self._engine = CParserWrapper(self.f, **self.options)\n",
+       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/pandas/io/parsers.py\", line 1390, in __init__\n",
+       "    self._reader = _parser.TextReader(src, **kwds)\n",
+       "  File \"pandas/parser.pyx\", line 373, in pandas.parser.TextReader.__cinit__ (pandas/parser.c:4184)\n",
+       "  File \"pandas/parser.pyx\", line 667, in pandas.parser.TextReader._setup_parser_source (pandas/parser.c:8449)\n",
+       "IOError: File ./data/model_doc2vec_v2_100dim_final.csv does not exist\n",
+       "\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "scala.Option.foreach(Option.scala:257)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:162)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
+       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+       "java.lang.reflect.Method.invoke(Method.java:498)\n",
+       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
+       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
+       "py4j.Gateway.invoke(Gateway.java:280)\n",
+       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
+       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
+       "py4j.GatewayConnection.run(GatewayConnection.java:214)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#TODO: Cesar, please run this after you implement create_DOC2VEC\n",
     "# I assume that doc2vec has the same format as word2vec (so a similar helper function should work)\n",
@@ -945,7 +998,7 @@
     "t0 = time()\n",
     "\n",
     "df2 = create_DOC2VEC(df1_pd.copy(),\n",
-    "                     doc2vecmodel=\"./data/model_doc2vec_v2_100dim\")\n",
+    "                     doc2vecmodel=\"./data/model_doc2vec_v2_100dim_final.csv\")\n",
     "\n",
     "batch_output_csv(df2, \"doc2vecv0\", \"./data/DATA_DOC2VECV0_HADM_TOP10\", ICD9CODES_TOP10,\n",
     "                 hadmid_pickle='./data/TRAIN-VAL-TEST-HADMID.p')\n",
@@ -981,7 +1034,7 @@
     "t0 = time()\n",
     "\n",
     "df2 = create_DOC2VEC(df1_pd.copy(),\n",
-    "                     doc2vecmodel=\"./data/model_doc2vec_v2_300dim\")\n",
+    "                     doc2vecmodel=\"./data/model_doc2vec_v2_300dim_final.csv\")\n",
     "\n",
     "batch_output_csv(df2, \"doc2vecv0\", \"./data/DATA_DOC2VECV1_HADM_TOP10\", ICD9CODES_TOP10,\n",
     "                 hadmid_pickle='./data/TRAIN-VAL-TEST-HADMID.p')\n",
@@ -1017,7 +1070,7 @@
     "t0 = time()\n",
     "\n",
     "df2 = create_DOC2VEC(df1_pd.copy(),\n",
-    "                     doc2vecmodel=\"./data/model_doc2vec_v2_600dim\")\n",
+    "                     doc2vecmodel=\"./data/model_doc2vec_v2_600dim_final.csv\")\n",
     "\n",
     "batch_output_csv(df2, \"doc2vecv0\", \"./data/DATA_DOC2VECV2_HADM_TOP10\", ICD9CODES_TOP10,\n",
     "                 hadmid_pickle='./data/TRAIN-VAL-TEST-HADMID.p')\n",
