--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -85,26 +85,34 @@
     "from pyspark.mllib.evaluation import MulticlassMetrics\n",
     "from pyspark.sql.types import StringType, IntegerType\n",
     "import pyspark.sql.functions as F\n",
+    "import numpy as np\n",
     "\n",
     "concat_udf = F.udf(lambda cols: float(int(\"\".join([str(int(x)) for x in cols]), 2)), DoubleType())\n",
     "\n",
-    "def evaluate(df, labelCols):\n",
+    "def evaluate(df, labelCols, gettopX=-1):\n",
     "    labelCols2 = [i+\"_pred\" for i in labelCols]\n",
     "    df.cache()\n",
     "    \n",
-    "    r_list = {i: [] for i in ['accuracy', 'precision', 'recall', 'fmeasure']}\n",
+    "    r_list = {i: np.zeros((len(labelCols))) for i in ['accuracy', 'precision', 'recall', 'fmeasure']}\n",
     "    for i in xrange(len(labelCols)):\n",
     "        predandlabels = df.select(labelCols2[i], labelCols[i]).rdd \\\n",
     "                        .map(lambda x: (float(x[labelCols2[i]]), float(x[labelCols[i]])))\n",
     "        metrics = MulticlassMetrics(predandlabels)\n",
     "\n",
     "        # print metrics.confusionMatrix()\n",
-    "        r_list['accuracy'].append(metrics.accuracy)\n",
-    "        r_list['precision'].append(metrics.precision(1.0))\n",
-    "        r_list['recall'].append(metrics.recall(1.0))\n",
-    "        r_list['fmeasure'].append(metrics.fMeasure(label=1.0))\n",
+    "        r_list['accuracy'][i] = metrics.accuracy\n",
+    "        r_list['precision'][i] = metrics.precision(1.0)\n",
+    "        r_list['recall'][i] = metrics.recall(1.0)\n",
+    "        r_list['fmeasure'][i] = metrics.fMeasure(label=1.0)\n",
     "\n",
-    "    results = {m: (sum(rs) / len(rs)) for (m, rs) in r_list.iteritems()}\n",
+    "    results = {}\n",
+    "    for m, rs in r_list.iteritems():\n",
+    "        results[m] = np.mean(rs)\n",
+    "        \n",
+    "    if gettopX > 0:\n",
+    "        idx = np.argsort(np.nan_to_num(r_list['fmeasure']))[-gettopX:]\n",
+    "        for m, rs in r_list.iteritems():\n",
+    "            results[m+'_top'] = np.mean(rs[idx])\n",
     "            \n",
     "    return results\n",
     "\n",
@@ -253,7 +261,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -263,8 +271,22 @@
     "    r3 = \"{accuracy:.4f}\".format(**m3)\n",
     "    r4 = \"{accuracy:.4f}\".format(**m4)\n",
     "    return \"{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\hline\".format(inum, r1, r3, r2, r4)\n",
-    "    \n",
-    "def run_experiment(input_name):\n",
+    "\n",
+    "def print_latex2(inum, m1, m2):\n",
+    "    r1 = \"{precision_top:.4f} & {recall_top:.4f} & {fmeasure_top:.4f} & {accuracy_top:.4f}\".format(**m1)\n",
+    "    r2 = \"{precision_top:.4f} & {recall_top:.4f} & {fmeasure_top:.4f} & {accuracy_top:.4f}\".format(**m2)\n",
+    "    return \"{0} & {1} & & {2} & \\\\\\\\ \\hline\".format(inum, r1, r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def run_experiment(input_name, iterations=[5, 10, 25, 50, 75, 100], gettopX=-1):\n",
     "    df_train = read_csv(\"{0}_train.csv\".format(input_name))\n",
     "    df_val = read_csv(\"{0}_val.csv\".format(input_name))\n",
     "    df_test = read_csv(\"{0}_test.csv\".format(input_name))\n",
@@ -277,30 +299,32 @@
     "    print input_name\n",
     "    print \"Train, Test:\", df_train.count(), df_test.count()\n",
     "    print \"iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\"\n",
-    "    for maxIter in [5, 10, 25, 50, 75, 100]:\n",
+    "    for maxIter in iterations:\n",
     "        clr = CustomLogisticRegression()\n",
     "        clr.fit(df_train, maxIter=maxIter)\n",
     "        df_pred_train = clr.predict(df_train)\n",
     "        df_pred_test = clr.predict(df_test)\n",
     "\n",
-    "        r1 = evaluate(df_pred_train, clr.labelCols)\n",
-    "        r2 = evaluate(df_pred_test, clr.labelCols)\n",
+    "        r1 = evaluate(df_pred_train, clr.labelCols, gettopX=gettopX)\n",
+    "        r2 = evaluate(df_pred_test, clr.labelCols, gettopX=gettopX)\n",
     "        r3 = evaluate_em(df_pred_train, clr.labelCols, metrics=[\"accuracy\"])\n",
     "        r4 = evaluate_em(df_pred_test, clr.labelCols, metrics=[\"accuracy\"])\n",
     "        \n",
     "        print print_latex(maxIter, r1, r2, r3, r4)\n",
+    "        if gettopX > 0:\n",
+    "            print print_latex2(str(maxIter)+\" top\", r1, r2)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def run_experiment2(input_name, depths=[5, 10, 20, 30]):\n",
+    "def run_experiment2(input_name, depths=[5, 10, 20, 30], gettopX=-1):\n",
     "    df_train = read_csv(\"{0}_train.csv\".format(input_name))\n",
     "    df_val = read_csv(\"{0}_val.csv\".format(input_name))\n",
     "    df_test = read_csv(\"{0}_test.csv\".format(input_name))\n",
@@ -319,12 +343,14 @@
     "        df_pred_train = clr.predict(df_train)\n",
     "        df_pred_test = clr.predict(df_test)\n",
     "\n",
-    "        r1 = evaluate(df_pred_train, clr.labelCols)\n",
-    "        r2 = evaluate(df_pred_test, clr.labelCols)\n",
+    "        r1 = evaluate(df_pred_train, clr.labelCols, gettopX=gettopX)\n",
+    "        r2 = evaluate(df_pred_test, clr.labelCols, gettopX=gettopX)\n",
     "        r3 = evaluate_em(df_pred_train, clr.labelCols, metrics=[\"accuracy\"])\n",
     "        r4 = evaluate_em(df_pred_test, clr.labelCols, metrics=[\"accuracy\"])\n",
     "        \n",
     "        print print_latex(maxDepth, r1, r2, r3, r4)\n",
+    "        if gettopX > 0:\n",
+    "            print print_latex2(maxDepth, r1, r2)\n",
     "\n"
    ]
   },
@@ -947,6 +973,64 @@
    ],
    "source": [
     "run_experiment2(\"./data/DATA_WORD2VECV2_HADM_TOP50CAT\", depths=[20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_TFIDFV1_HADM_TOP50\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "10 & 0.9863 & 0.9768 & 0.9815 & 0.9945 & 0.7892 & 0.4372 & 0.3213 & 0.3662 & 0.9148 & 0.0775 \\\\ \\hline\n",
+      "10 top & 0.9999 & 0.9982 & 0.9991 & 0.9999 & & 0.6944 & 0.6286 & 0.6577 & 0.8941 & \\\\ \\hline\n",
+      "./data/DATA_TFIDFV1_HADM_TOP50CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "10 & 0.9750 & 0.9572 & 0.9659 & 0.9887 & 0.6383 & 0.4858 & 0.3894 & 0.4301 & 0.8841 & 0.0765 \\\\ \\hline\n",
+      "10 top & 0.9991 & 0.9971 & 0.9981 & 0.9998 & & 0.7422 & 0.6732 & 0.7049 & 0.8803 & \\\\ \\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP50\", iterations=[10], gettopX=10)\n",
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP50CAT\", iterations=[10], gettopX=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_TFIDFV1_HADM_TOP50\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "20 & 0.9983 & 0.2863 & 0.3869 & 0.9452 & 0.1764 & 0.5533 & 0.0963 & 0.1161 & 0.9221 & 0.0935 \\\\ \\hline\n",
+      "20 & 0.9924 & 0.7308 & 0.8273 & 0.9475 & & 0.7836 & 0.4474 & 0.5154 & 0.8866 & \\\\ \\hline\n",
+      "./data/DATA_TFIDFV1_HADM_TOP50CAT\n",
+      "Train, Test: 26363 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "20 & 0.9986 & 0.3285 & 0.4449 & 0.9274 & 0.1283 & 0.6428 & 0.1149 & 0.1596 & 0.8905 & 0.0795 \\\\ \\hline\n",
+      "20 & 0.9934 & 0.6928 & 0.8115 & 0.9215 & & 0.8386 & 0.4346 & 0.5526 & 0.8481 & \\\\ \\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP50\", depths=[20], gettopX=10)\n",
+    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP50CAT\", depths=[20], gettopX=10)"
    ]
   },
   {
