fixed nonseq ipynb merge

--- a/code/feature_extraction_nonseq.ipynb
+++ b/code/feature_extraction_nonseq.ipynb
@@ -85,7 +85,7 @@
     "STOPWORDS_v0 = [str(i) for i in STOPWORDS_v0]\n",
     "\n",
     "# print \"TFIDF v0 stop words\"\n",
-    "print STOPWORDS_v0"
+    "# print STOPWORDS_v0"
    ]
   },
   {
@@ -1023,13 +1023,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-<<<<<<< HEAD
-    "collapsed": false
-=======
     "collapsed": true,
     "deletable": true,
     "editable": true
->>>>>>> 68600efd0aa5bba6c15c2f1f2fe229ae7e86f3a3
    },
    "outputs": [
     {
@@ -1737,21 +1733,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Apache Toree - PySpark",
    "language": "python",
-   "name": "python2"
+   "name": "apache_toree_pyspark"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
    "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "python",
+   "version": "2.7.13\n"
   }
  },
  "nbformat": 4,
