cleaned Luke related ipynb

--- a/code/describe_icd9category.ipynb
+++ b/code/describe_icd9category.ipynb
@@ -12,6 +12,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Input:\n",
+    "  * ./data/NOTEEVENTS-2.csv (contains clinical notes / text)\n",
+    "  * ./data/DIAGNOSES_ICD.csv (contains admission to ICD9 code diagnosis)\n",
+    "* Output: None\n",
+    "* Description:\n",
+    "  * Descriptive statistics of ICD9 categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "deletable": true,
