--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -11,6 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Input:\n",
+    "  * ./data/DATA_[TFIDFV0-1/WORD2VECV0-4/DOC2VECV0-2]_HADM_TOP[10/10CAT/50/50CAT]_[train/val/test].csv\n",
+    "* Output: None\n",
+    "* Description: \n",
+    "  * machine learning baseline models Logistic Regression and Random Forest\n",
+    "  * the script to run my experiments (and more) are here\n",
+    "  * the results for my experiments (and more) are in this notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Initialization"
    ]
   },
