--- a/code/preprocess.ipynb
+++ b/code/preprocess.ipynb
@@ -12,6 +12,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Input:\n",
+    "  * ./data/NOTEEVENTS-2.csv (contains clinical notes / text)\n",
+    "  * ./data/DIAGNOSES_ICD.csv (contains admission to ICD9 code diagnosis)\n",
+    "  * ./data/D_ICD_DIAGNOSES.csv (contains the ICD9 code description)\n",
+    "* Output:\n",
+    "  * ./data/DATA_HADM (contains top 50 icd9code, top 50 icd9cat, and clinical text for each admission)\n",
+    "  * ./data/DATA_HADM_CLEANED (contains top 50 icd9code, top 50 icd9cat, and cleaned clinical text w/out stopwords for each admission)\n",
+    "  * ./data/ICD9CODES.p (pickle file of all ICD9 codes)\n",
+    "  * ./data/ICD9CODES_TOP10.p (pickle file of top 10 ICD9 codes)\n",
+    "  * ./data/ICD9CODES_TOP50.p (pickle file of top 50 ICD9 codes)\n",
+    "  * ./data/ICD9CAT_TOP10.p (pickle file of top 10 ICD9 categories)\n",
+    "  * ./data/ICD9CAT_TOP50.p (pickle file of top 50 ICD9 categories)\n",
+    "* Description: converts the raw MIMIC III csv files into multi-labels-and-texts csv format. The output of this notebook are dumped in corresponding folders, which is merged by merge_data.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
     "deletable": true,
