--- a/code/feature_extraction_nonseq.ipynb
+++ b/code/feature_extraction_nonseq.ipynb
@@ -12,6 +12,34 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Input:\n",
+    "  * ./data/ICD9CODES.p (pickle file of all ICD9 codes)\n",
+    "  * ./data/ICD9CODES_TOP10.p (pickle file of top 10 ICD9 codes)\n",
+    "  * ./data/ICD9CODES_TOP50.p (pickle file of top 50 ICD9 codes)\n",
+    "  * ./data/ICD9CAT_TOP10.p (pickle file of top 10 ICD9 categories)\n",
+    "  * ./data/ICD9CAT_TOP50.p (pickle file of top 50 ICD9 categories)\n",
+    "  * ./data/TRAIN-VAL-TEST-HADMID.p (pickle file of train-val-test sets. each set contains a list of hadm_id)\n",
+    "  * ./data/DATA_HADM.csv (contains top 50 icd9code, top 50 icd9cat, and clinical text for each admission)\n",
+    "  * ./data/DATA_HADM_CLEANED.csv (contains top 50 icd9code, top 50 icd9cat, and cleaned clinical text w/out stopwords for each admission)\n",
+    "  * ./data/model_word2vec_v2_*dim.txt (our custom word2vec model)\n",
+    "  * ./data/bio_nlp_vec/PubMed-shuffle-win-*.txt (pre-trained bionlp word2vec model. convert from .bin to .txt using gensim)\n",
+    "  * ./data/model_doc2vec_v2_*dim_final.csv (our custom doc2vec model)\n",
+    "* Output:\n",
+    "  * ./data/DATA_[TFIDFV0-1/WORD2VECV0-4/DOC2VECV0-2]_HADM_TOP[10/10CAT/50/50CAT]_[train/val/test].csv\n",
+    "* Description: \n",
+    "  * All non-sequential feature extraction tried in the paper.\n",
+    "  * word2vec_*dim = custom word2vec with * features in the paper\n",
+    "  * PubMed-shuffle-win-*.txt = pre trained word2vec in the paper (bio*)\n",
+    "  * TFIDFV0-1 = tfidf v0-1 in the paper\n",
+    "  * WORD2VECV0-2 = word2vec_f100-600 in the paper\n",
+    "  * WORD2VECV3-4 = word2vec_bio02-30 in the paper\n",
+    "  * DOC2VECV0-2 = doc2vec_f100-600 in the paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
