commiting Cesar's clean

--- a/code/doc2vec-generator.ipynb
+++ b/code/doc2vec-generator.ipynb
@@ -14,7 +14,7 @@
     "pandas = 0.19.2\n",
     "numpy = 1.11.2\n",
     "\n",
-    "#### I used DATA_HADM_TOP10.csv from feature_extraction_nonseq.ipynb "
+    "#### I used DATA_HADM.csv from feature_extraction_nonseq.ipynb "
    ]
   },
   {
@@ -153,7 +153,7 @@
     "import pandas as pd\n",
     "import pickle\n",
     "\n",
-    "df_hadm_top10 = pd.read_csv(\"/Volumes/EXTERNAL1/MIMICIII/DATA_HADM_TOP10.csv\", escapechar='\\\\')\n",
+    "df_hadm_top10 = pd.read_csv(\"./data/DATA_HADM.csv\", escapechar='\\\\')\n",
     "ICD9CODES = pickle.load(open(\"./data/ICD9CODES.p\", \"r\"))\n",
     "\n",
     "df_hadm_top10.head(5)"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -171,16 +171,63 @@
     {
      "data": {
       "text/plain": [
-       "52726"
+       "'\"Admission Date:  [**2127-7-23**]              Discharge Date:   [**2127-7-29**] Date of Birth:  [**2042-9-2**]             Sex:   M Service: MEDICINE Allergies: Patient recorded as having No Known Allergies to Drugs Attending:[**First Name3 (LF) 106**] Chief Complaint: s/p Cath with pulmonary edema Major Surgical or Invasive Procedure: 1)Diagnostic Cardiac Catheterization 2)Cardiac Catheterization s/p Left Circumflex and Left Main Coronary Stenting and Right Coronary Angioplasty History of Present Illness: 84 yo M w/ Cerebral palsy, mild MR, seizure d/o, sCHF, recent echo showed worsening MR, mod pulm HTN, and biventricular dysfunction.  Patient had catheterization today showing diffuse CAD with elevated PCWP and pulmonary edema. History obtained from patient, group home manager, and medical records. Patient has some occasional shortness of breath that does not appear to be associated with exertion. Also has occasional cough with mild sputum production. Denies orthopnea, PND, recent chest pain. Group home manager agrees with patient\\'s history. Patient denies diarrhea or constipation, nausea or vomiting, or changes in weight. Patient was seen in [**Month (only) **] by Dr. [**Last Name (STitle) **] for evaluation of c/o exertional chest pain and was treated medically. Patient was also admitted for chest pain in [**2-5**] when ruled out for MI. ECHO done on [**2127-6-26**] showed Severe biventricular hypokinesis c/w diffuse process (multivessel CAD, toxin, metabolic, etc.). Moderate pulmonary artery systolic hypertension. Mild-moderate mitral regurgitation. It showed worsening function in comparison to ECHO in [**11-6**]. Cardiac perfusion imaging done in [**11-6**] showed no new or reversible perfusion defects. Stable fixed perfusion defects involving distal anterior, apex and septum and worsening hypokinesis and left ventricular cavity dilatation. LVEF=28%. In cath, CO was 4.17 with CI of 2.69. PA sat of 60%, PCWP of 40 with RA pressure of 15. LAD was occluded, LMCA 60% ostial occlusion and 80% mid. LCX 80% mid and RCA occluded. Patient was given Lasix 40mg IV and admitted to the CCU for aggressive diuresis. Past Medical History: 1. CARDIAC RISK FACTORS: +Dyslipidemia, +Hypertension 2. CARDIAC HISTORY -CABG: none -PERCUTANEOUS CORONARY INTERVENTIONS: none -PACING/ICD: none . OTHER PMH: - Right eye cataract - bilateral carotid stenosis ([**2126-8-1**] U/S : right 60-69% stenosis, on the left a 40-59% stenosis) - Seizure disorder (resistant to keppra) - Legally blind in left eye. - Gastroesophageal reflux disease. - Osteoarthritis. - Mild MR secondary to Cerebral Palsy - Prostate cancer, with radiation proctitis secondary to XRT - Status post left wrist fusion. - Status post CVA with residual left sided hemiparesis. - Hearing loss Social History: The patient lives in a group home. He denies any history of tobacco or alcohol. No h/o illicit drug use. He states his niece is invloved with his care and lives nearby; visits him at his group home often. -Tobacco history:none Family History: No family history of arrhythmia, cardiomyopathies, or sudden cardiac death; but he states his brother has \"\"heart disease\"\" and high cholesterol. Physical Exam: VS: T= 96.4 BP=100/54 HR=51 RR=15 O2 sat= 97% 2L NC GENERAL: WDWN in NAD. Oriented x3. Mood'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df_hadm_top10)"
+    "df_hadm_top10.iloc[33]['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import re\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "\n",
+    "def preprocessor_v1(text):\n",
+    "    text = re.sub('\\[\\*\\*[^\\]]*\\*\\*\\]', '', text)\n",
+    "    text = re.sub('<[^>]*>', '', text)\n",
+    "    text = re.sub('[\\W]+', ' ', text.lower()) \n",
+    "    return text\n",
+    "\n",
+    "def create_TFIDF_v1(df_train, df_apply, inputCol=\"text\", outputCol=\"features\",\n",
+    "                    minDocFreq=3, maxDocFreq=1.0, numFeatures=20):\n",
+    "    df_train['z_cleaned'] = df_train[inputCol].apply(preprocessor_v1)\n",
+    "    df_apply['z_cleaned'] = df_apply[inputCol].apply(preprocessor_v1)\n",
+    "\n",
+    "    # Now we create the sparse matrix of tfidf values\n",
+    "    tfidf = TfidfVectorizer(input='content',ngram_range=(1, 1),\n",
+    "                            stop_words=STOPWORDS_v1, \n",
+    "                            min_df=minDocFreq,\n",
+    "                            max_df=maxDocFreq,\n",
+    "                            max_features=numFeatures)\n",
+    "    # I select to remove stopwords and minimun doc frequency =10 to delete very unusual words\n",
+    "    # that only show up in less than 10 notes (out of 59k notes available) \n",
+    "\n",
+    "    tfidf.fit([c for c in df_train['z_cleaned']])\n",
+    "    dtm = tfidf.transform([c for c in df_apply['z_cleaned']]).tocsr()\n",
+    "    dtm.sort_indices()\n",
+    "    df_apply[outputCol] = list(dtm)\n",
+    "   \n",
+    "    del df_train['z_cleaned']\n",
+    "    del df_apply['z_cleaned']\n",
+    "    del df_apply[inputCol]\n",
+    "    \n",
+    "    return df_apply"
    ]
   },
   {
@@ -498,15 +545,13 @@
     "\n",
     "import random\n",
     "\n",
-    "size = 600\n",
+    "size = 600 #change to 100 and 300 to generate vector with those dimensions\n",
     "\n",
-    "#instantiate our DM and DBOW models\n",
+    "#instantiate our model\n",
     "model_dm = Doc2Vec(min_count=10, window=5, size=size, sample=1e-3, negative=5, workers=4)\n",
-    "#model_dbow = Doc2Vec(min_count=10, window=5, size=size, sample=1e-3, negative=5, dm=0, workers=4)\n",
     "\n",
     "#build vocab over all reviews\n",
     "model_dm.build_vocab(sentence)\n",
-    "#model_dbow.build_vocab(sentence)\n",
     "\n",
     "#We pass through the data set multiple times, shuffling the training reviews each time to improve accuracy.\n",
     "Idx=list(range(len(sentence)))\n",
@@ -538,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -558,12 +603,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
+    "import re\n",
     "def preprocessor_2(text):\n",
     "    text = re.sub('<[^>]*>', '', text)\n",
     "    text = re.sub('[\\W]+', ' ', text.lower())\n",
@@ -575,71 +623,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Time taken for Doc2vec pred over test set: ', 732.23779296875, 'seconds.')\n"
+     ]
+    }
+   ],
    "source": [
-    "model_dm_600dim=test_set_clean.apply(model_dm.infer_vector)"
+    "from time import time\n",
+    "t0 = time()\n",
+    "model_dm_600dim=test_set_clean.apply(model_dm.infer_vector)\n",
+    "elapsed=time() - t0\n",
+    "print(\"Time taken for Doc2vec pred over test set: \", elapsed, \"seconds.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "train_d2v=np.asarray(model_dm.docvecs)\n",
-    "df_train_d2v = pd.DataFrame(data=train_d2v, index=idx_join_train)\n",
+    "df_train_d2v = pd.DataFrame(data=train_d2v, index=df_hadm_top10.iloc[idx_join_train]['id'])\n",
     "test_d2v = [tuple(x) for x in model_dm_600dim]\n",
-    "df_test_d2v = pd.DataFrame(data=test_d2v, index=idx_test)\n",
+    "df_test_d2v = pd.DataFrame(data=test_d2v, index=df_hadm_top10.iloc[idx_test]['id'])\n",
     "df_d2v = pd.concat([df_train_d2v,df_test_d2v])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 54,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "52726"
-      ]
-     },
-     "execution_count": 240,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#len(model_dm.docvecs)\n",
-    "#test_set_clean.iloc[0]\n",
-    "len(df_d2v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "#save to drive            \n",
-    "df_d2v.to_csv(\"model_doc2vec_v2_600dim_final.csv\")"
+    "df_d2v.to_csv(\"./data/model_doc2vec_v2_600dim_final.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -661,7 +703,7 @@
        " ('lipoma', 0.29490727186203003)]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
